--- a/login.html
+++ b/login.html
@@ -188,7 +188,7 @@ ul, ol, dl { list-style: none; }
         $("#login").click(function () {
             $.ajax({
                 type:"post",
-                url:"${pageContext.request.contextPath}/petUser/login",
+                url:"http://loaclhost:8080/PetCare/petUser/login",
                 dataType:"json",
                 data:{
                     username:$("#username").val(),
